--- a/week08/tutorial/tb_komatsu.html
+++ b/week08/tutorial/tb_komatsu.html
@@ -44,9 +44,9 @@
       <header>
          <h1>The Komatsu Family</h1>
          <figure>
-            <img src="tb_komatsu.png" alt="family portrait" />
+            <img src="tb_komatsu.png" alt="family portrait" usemap="#Family_Map"/>
             <figcaption>(L-R): Ikko, Mika, Hiroji, Genta, Suzuko</figcaption>
-            <map name="Family Map">
+            <map name="Family_Map">
                <area shape="rect" coords="74,74,123,141" href="tb_ikko.html" alt="Ikko Komatsu" />
                <area shape="rect" coords="126,109,177,172" href="tb_mika.html" alt="Mika Komatsu" />
                <area shape="rect" coords="180,157,230,214" href="tb_hiroji.html" alt="Hiroji Komatsu" />
