--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>My personal web page for class CSC230-Web Design</title>
+    <link href="Index.css" rel="Stylesheet" />
 </head>
 
 <body>
@@ -24,7 +25,13 @@
                     <li>Chapter 1, Review- <a href="week03/review/mp_index.html">Mobile Panini</a></li>
                 </ul>
                 <li>week 4 - </li>
+                <ul>
+                    <li>Chapter 1, Case 1- <a href="week04/case1/jtc_index.html">Jedd's Tree Service</a></li>
+                </ul>
                 <li>Week 5 - </li>
+                <ul>
+                    <li></li>
+                </ul>
                 <li>Week 6 - </li>
                 <li>Week 7 - </li>
                 <li>Week 8 - </li>
