--- a/index.html
+++ b/index.html
@@ -1,50 +1,84 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>My personal web page for class CSC230-Web Design</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
     <link href="Index.css" rel="Stylesheet" />
-</head>
+  </head>
 
-<body>
-    <header>
-        <h1>Mark Abell</h1>
-    </header>
+  <body>
+    <div class="container">
+      <div class="row">
+          <div class="col-4 text-center bg-dark">
+            <img class="img-fluid mx-auto" src="selfie.jpg" alt="self pic" style="width: 250px; height:250px;" />
+          </div>
+        <div class="col-8 bg-light">
+          <h1>Mark Abell</h1>
+        </div>
+      </div>
+    </div>
     <section>
-        <p>My name is Mark Abell. I will graduate in 2021 with a Associate's Degree in Information Technology. My email is mabell4446@my.sullivan.edu</p>
-        <img src="selfie.jpg" alt="self pic" style="width:300px; height:300px;" />
-        <article>
-            <ol>
-                <li>Week 1 - </li>
-                <li>Week 2 - </li>
-                <ul>
-                    <li>Chapter 1, Tutorial - <a href="week02/tutorial/ct_start.html">Curbside Thai</a></li>
-                </ul>
-                <li>Week 3 - </li>
-                <ul>
-                    <li>Chapter 1, Review- <a href="week03/review/mp_index.html">Mobile Panini</a></li>
-                </ul>
-                <li>week 4 - </li>
-                <ul>
-                    <li>Chapter 1, Case 1- <a href="week04/case1/jtc_index.html">Jedd's Tree Service</a></li>
-                </ul>
-                <li>Week 5 - </li>
-                <ul>
-                    <li></li>
-                </ul>
-                <li>Week 6 - </li>
-                <li>Week 7 - </li>
-                <li>Week 8 - </li>
-                <li>Week 9 - </li>
-                <li>Week 10 - </li>
-                <li>Week 11 - </li>
-            </ol>
-        </article>
+      <p>
+        My name is Mark Abell. I will graduate in 2021 with a Associate's Degree
+        in Information Technology. My email is mabell4446@my.sullivan.edu
+      </p>
+      
+      <article>
+        <ol>
+          <li>Week 1 -</li>
+          <li>Week 2 -</li>
+          <ul>
+            <li>
+              Chapter 1, Tutorial -
+              <a href="week02/tutorial/ct_start.html">Curbside Thai</a>
+            </li>
+          </ul>
+          <li>Week 3 -</li>
+          <ul>
+            <li>
+              Chapter 1, Review-
+              <a href="week03/review/mp_index.html">Mobile Panini</a>
+            </li>
+          </ul>
+          <li>week 4 -</li>
+          <ul>
+            <li>
+              Chapter 1, Case 1-
+              <a href="week04/case1/jtc_index.html">Jedd's Tree Service</a>
+            </li>
+          </ul>
+          <li>Week 5 -</li>
+          <ul>
+            <li></li>
+          </ul>
+          <li>Week 6 -</li>
+          <li>Week 7 -</li>
+          <li>Week 8 -</li>
+          <li>Week 9 -</li>
+          <li>Week 10 -</li>
+          <li>Week 11 -</li>
+        </ol>
+      </article>
     </section>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
