--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
   <body>
     <div class="container">
       <div class="row">
-          <div class="col-4 text-center bg-dark">
+          <div class="col-4 text-center">
             <img class="img-fluid mx-auto" src="selfie.jpg" alt="self pic" style="width: 250px; height:250px;" />
           </div>
-        <div class="col-8 bg-light">
+        <div class="col-8 text-center bg-light">
           <h1>Mark Abell</h1>
+          <h3>
+              CSC230 Website Design <br />
+              Summer 2019
+          </h3>
         </div>
       </div>
     </div>
