--- a/week10/tutorial/tf_prek.html
+++ b/week10/tutorial/tf_prek.html
@@ -7,15 +7,18 @@
    Tutorial Case
    
    Pre-K Classes offered by Trusted Friends
-   Author: 
-   Date:   
+   Author: Mark Abell
+   Date:   08/25/2019
    
    Filename: tf_prek.html
    -->
    
    <title>Pre-K Classes at Trusted Friends</title>
    <meta charset="utf-8" />
-   <meta name="viewport" content="width=device-width, initial-scale=1" />  
+   <meta name="viewport" content="width=device-width, initial-scale=1" />
+   <link href="tf_reset.css" rel="stylesheet" />
+   <link href="tf_styles2.css" rel="stylesheet" />
+   <link href="tf_flex.css" rel="stylesheet" />
 </head>
 
 <body>
