--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
   <body>
     <div class="container">
       <div class="row">
-          <div class="col-4 text-center">
-            <img class="img-fluid mx-auto" src="selfie.jpg" alt="self pic" style="width: 250px; height:250px;" />
-          </div>
+        <div class="col-4 text-center">
+          <img
+            class="img-fluid mx-auto"
+            src="selfie.jpg"
+            alt="self pic"
+            style="width: 250px; height:250px;"
+          />
+        </div>
         <div class="col-8 text-center bg-light">
           <h1>Mark Abell</h1>
           <h3>
-              CSC230 Website Design <br />
-              Summer 2019
+            CSC230 Website Design <br />
+            Summer 2019
           </h3>
         </div>
       </div>
@@ -31,7 +36,7 @@
         My name is Mark Abell. I will graduate in 2021 with a Associate's Degree
         in Information Technology. My email is mabell4446@my.sullivan.edu
       </p>
-      
+
       <article>
         <ol>
           <li>Week 1 -</li>
@@ -58,12 +63,52 @@
           </ul>
           <li>Week 5 -</li>
           <ul>
-            <li></li>
+            <li>
+                HTML 2, Review
+              <a href="week05/review/tss_coach.html">Tri and succeed sports</a>
+            </li>
+            <li>
+                HTML 2, Tutorial
+              <a href="week05/tutorial/tss_home.html">TSS Coaches Profile</a>
+            </li>
           </ul>
           <li>Week 6 -</li>
+          <ul>
+            <li>
+                HTML 3, Tutorial
+              <a href="week06/tutorial/pc_home.html">Pandasia Chocolates</a>
+            </li>
+            <li>
+              HTML 3, Case 1
+              <a href="week06/case1/ph_plays.html">Philip Henslowe Classic Theatre</a>
+            </li>
+            <li>
+              Midterm Exam
+              <a href="week06/case2/mw_tour.html">Mountain Wheels</a>
+            </li>
+          </ul>
           <li>Week 7 -</li>
+          <ul>
+            <li>
+                HTML 3, case 1
+              <a href="week07/case1/sp_home.html">Slate and Pencil Tutoring</a>
+            </li>
+            <li>
+                HTML 3, Case 2 
+              <a href="week07/case2/ce_front.html">Costume Expressions</a>
+            </li>
+          </ul>
           <li>Week 8 -</li>
+          <ul>
+            <li>
+              HTML 4, Tutorial
+              <a href="week08/tutorial/tb_komatsu.html">Tree And Book</a>
+            </li>
+          </ul>
           <li>Week 9 -</li>
+          <li>
+            <a href="week09/tutorial/tf_home.html">Trusted Friends Daycare</a>
+          </li>
           <li>Week 10 -</li>
           <li>Week 11 -</li>
         </ol>
