--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         My name is Mark Abell. I will graduate in 2021 with a Associate's Degree
         in Information Technology. My email is mabell4446@my.sullivan.edu
       </p>
+      <aside>
+        <h1>My Favorite Things</h1>
+      </aside>
 
       <article>
         <ol>
@@ -64,23 +67,25 @@
           <li>Week 5 -</li>
           <ul>
             <li>
-                HTML 2, Review
+              HTML 2, Review
               <a href="week05/review/tss_coach.html">Tri and succeed sports</a>
             </li>
             <li>
-                HTML 2, Tutorial
+              HTML 2, Tutorial
               <a href="week05/tutorial/tss_home.html">TSS Coaches Profile</a>
             </li>
           </ul>
           <li>Week 6 -</li>
           <ul>
             <li>
-                HTML 3, Tutorial
+              HTML 3, Tutorial
               <a href="week06/tutorial/pc_home.html">Pandasia Chocolates</a>
             </li>
             <li>
               HTML 3, Case 1
-              <a href="week06/case1/ph_plays.html">Philip Henslowe Classic Theatre</a>
+              <a href="week06/case1/ph_plays.html"
+                >Philip Henslowe Classic Theatre</a
+              >
             </li>
             <li>
               Midterm Exam
@@ -90,11 +95,11 @@
           <li>Week 7 -</li>
           <ul>
             <li>
-                HTML 3, case 1
+              HTML 3, case 1
               <a href="week07/case1/sp_home.html">Slate and Pencil Tutoring</a>
             </li>
             <li>
-                HTML 3, Case 2 
+              HTML 3, Case 2
               <a href="week07/case2/ce_front.html">Costume Expressions</a>
             </li>
           </ul>
@@ -106,14 +111,19 @@
             </li>
           </ul>
           <li>Week 9 -</li>
-          <li>
-            <a href="week09/tutorial/tf_home.html">Trusted Friends Daycare</a>
-          </li>
+          <ul>
+            <li>
+              <a href="week09/tutorial/tf_home.html">Trusted Friends Daycare</a>
+            </li>
+          </ul>
           <li>Week 10 -</li>
           <li>Week 11 -</li>
         </ol>
       </article>
     </section>
+    <footer>
+      &copy;Mark Abell, This page was created for partial fullfillment of CSC230 Website Design
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
