Updated HTML and CSS

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       </p>
       <aside>
         <h1>My Favorite Things</h1>
+        
       </aside>
 
       <article>
@@ -122,7 +123,8 @@
       </article>
     </section>
     <footer>
-      &copy;Mark Abell, This page was created for partial fullfillment of CSC230 Website Design
+      &copy;Mark Abell, This page was created for partial fullfillment of CSC230
+      Website Design
     </footer>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
