Updated Index.html and tribute.html

--- a/index.html
+++ b/index.html
@@ -118,6 +118,12 @@
             </li>
           </ul>
           <li>Week 10 -</li>
+          <ul>
+            <li>
+              Tribute
+              <a href="Tribute.html">Tribute</a>
+            </li>
+          </ul>
           <li>Week 11 -</li>
         </ol>
       </article>
