--- a/Tribute.html
+++ b/Tribute.html
@@ -25,13 +25,22 @@
           <h1>Tetris</h1>
         </div>
       </div>
-    </div>
     <section>
       Tetris was created in 1984 by Alexey Pajitnov while he was working for the
       Dorodnitsyn Computing Centre of the Soviet Academy of Sciences. Pajitnov
       was inspired by a puzzle game called "pentominoes," in which different
-      wooden shapes made of five equal squares are assembled in a box.
+      wooden shapes made of five equal squares are assembled in a box. When he shared
+      the game with his co-workers, they started playing it — and kept playing
+      it and playing it. These early players copied and shared "Tetris" on
+      floppy disks, and the game quickly spread across Moscow. Pajitnov sent a copy to
+       a colleague in Hungary, it ended up on display in a software exhibit at the Hungarian 
+       Institute of Technology, where it came to the attention of Robert Stein, owner of 
+       Andromeda Software Ltd.
     </section>
+    <footer>
+      &copy;Mark Abell, This page was created for partial fullfillment of CSC230
+      Website Design
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
