Modified Tribute.html and css

--- a/Tribute.html
+++ b/Tribute.html
@@ -37,6 +37,10 @@
        Institute of Technology, where it came to the attention of Robert Stein, owner of 
        Andromeda Software Ltd.
     </section>
+    <aside>
+      <h1>References</h1>
+      <a href="https://www.livescience.com/56481-strange-history-of-tetris.html">The history of Tetris</a>
+    </aside>
     <footer>
       &copy;Mark Abell, This page was created for partial fullfillment of CSC230
       Website Design
