Updated Tribute page

--- a/Tribute.html
+++ b/Tribute.html
@@ -25,21 +25,29 @@
           <h1>Tetris</h1>
         </div>
       </div>
+    </div>
     <section>
-      Tetris was created in 1984 by Alexey Pajitnov while he was working for the
-      Dorodnitsyn Computing Centre of the Soviet Academy of Sciences. Pajitnov
-      was inspired by a puzzle game called "pentominoes," in which different
-      wooden shapes made of five equal squares are assembled in a box. When he shared
-      the game with his co-workers, they started playing it — and kept playing
-      it and playing it. These early players copied and shared "Tetris" on
-      floppy disks, and the game quickly spread across Moscow. Pajitnov sent a copy to
-       a colleague in Hungary, it ended up on display in a software exhibit at the Hungarian 
-       Institute of Technology, where it came to the attention of Robert Stein, owner of 
-       Andromeda Software Ltd.
+      <div class="container">
+        <div class="row">
+          Tetris was created in 1984 by Alexey Pajitnov while he was working for
+          the Dorodnitsyn Computing Centre of the Soviet Academy of Sciences.
+          Pajitnov was inspired by a puzzle game called "pentominoes," in which
+          different wooden shapes made of five equal squares are assembled in a
+          box. When he shared the game with his co-workers, they started playing
+          it — and kept playing it and playing it. These early players copied
+          and shared "Tetris" on floppy disks, and the game quickly spread
+          across Moscow. Pajitnov sent a copy to a colleague in Hungary, it
+          ended up on display in a software exhibit at the Hungarian Institute
+          of Technology, where it came to the attention of Robert Stein, owner
+          of Andromeda Software Ltd.
+        </div>
+      </div>
     </section>
     <aside>
       <h1>References</h1>
-      <a href="https://www.livescience.com/56481-strange-history-of-tetris.html">The history of Tetris</a>
+      <a href="https://www.livescience.com/56481-strange-history-of-tetris.html"
+        >The history of Tetris</a
+      >
     </aside>
     <footer>
       &copy;Mark Abell, This page was created for partial fullfillment of CSC230
