Completed Head Element

--- a/Final Exam/FinalExam.html
+++ b/Final Exam/FinalExam.html
@@ -7,5 +7,14 @@
             Files:       Final Exam.html and Final Exam.css
             Description: Revised index page / Final Exam
     -->
+    <meta charset="utf-8" />
+    <title>Revised Index Page</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link href="FinalExam.css" rel="stylesheet" />
   </head>
 </html>
